force-app/main/default/objects/Book_Issue__c/Book_Issue__c.object-meta.xml
<CustomObject>
    <label>Book Issue</label>
    <nameField>
        <displayFormat>BI-{0000}</displayFormat>
        <label>Book Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>