force-app/main/default/objects/Book_Issue__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Book Issues</relationshipLabel>
    <relationshipName>Book_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>