force-app/main/default/objects/Book_Issue__c/fields/Fine_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fine_Amount__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Fine Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>