force-app/main/default/objects/Book_Issue__c/validationRules/Actual_Return_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Return_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT( ISBLANK( Actual_Return_Date__c )),
 Actual_Return_Date__c  &lt;  Issue_Date__c
)</errorConditionFormula>
    <errorDisplayField>Actual_Return_Date__c</errorDisplayField>
    <errorMessage>Actual Return Date cannot be before Return date</errorMessage>
</ValidationRule>