force-app/main/default/objects/Book_Issue__c/validationRules/Fine_Amount_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Fine_Amount_Cannot_Be_Negative</fullName>
    <active>true</active>
    <description>Prevents users from entering a negative fine amount.</description>
    <errorConditionFormula>Fine_Amount__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Fine_Amount__c</errorDisplayField>
    <errorMessage>Fine Amount cannot be negative.</errorMessage>
</ValidationRule>