force-app/main/default/objects/Book_Issue__c/validationRules/Return_Date_must_be_after_Issue_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Date_must_be_after_Issue_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Return_Date__c  &lt;  Issue_Date__c</errorConditionFormula>
    <errorDisplayField>Actual_Return_Date__c</errorDisplayField>
    <errorMessage>Return Date must be after Issue Date</errorMessage>
</ValidationRule>