force-app/main/default/objects/Book_Issue__c/validationRules/Student_and_book_must_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_and_book_must_be_selected</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 ISBLANK( Student0__c) ,
 ISBLANK( Book__c ) 
)</errorConditionFormula>
    <errorMessage>Student and book are mandatory.</errorMessage>
</ValidationRule>